# cabal-rs

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
test_build_pkg/: LICENSE  test-build-pkg.cabal
test_build_pkg/src/: Lib.hs
tests/: print_linking.rs
